Directories and Home Page (#23)
* Added sign up page

* Directories Fixed

* Updated Home Page with Mock Data

--- a/Final/index.html
+++ b/Final/index.html
@@ -14,13 +14,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="resources/stylesheets/style.css">
   <!-- Bootstrap JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"
     defer></script>
   <!-- custom js -->
-  <script src="index.js" defer></script>
+  <script src="resources/scripts/index.js" defer></script>
   <title>Rensselaer List</title>
 </head>
 
@@ -30,7 +30,7 @@
     <!-- Site Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <!-- Site logo -->
-      <a href="index.html" class="navbar-brand"><img class="RL-Logo" src="resources/Rensselear-List-Logo.png"
+      <a href="index.html" class="navbar-brand"><img class="RL-Logo" src="resources/images/Rensselear-List-Logo.png"
           alt="Rensselaer List Logo"></a>
       <!-- Nav button for mobile  -->
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#RL-Navbar"
@@ -129,11 +129,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/new1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Sitting/Standing Desk</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$79</h6>
             </div>
           </div>
         </a>
@@ -141,11 +141,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/new2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Spice Rack Organizer</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$30</h6>
             </div>
           </div>
         </a>
@@ -153,11 +153,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/new3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Dirt Devil  Vacuum</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$5</h6>
             </div>
           </div>
         </a>
@@ -165,11 +165,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/new4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Portable Mini-Fridge</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$25</h6>
             </div>
           </div>
         </a>
@@ -177,11 +177,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/new5.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Quilted Curtains </p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$35</h6>
             </div>
           </div>
         </a>
@@ -195,11 +195,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/top1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Hutch and Cabinet</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$225</h6>
             </div>
           </div>
         </a>
@@ -207,11 +207,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/top2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Oakwood Dresser </p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$80</h6>
             </div>
           </div>
         </a>
@@ -219,11 +219,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/top3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Love-Seat</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$230</h6>
             </div>
           </div>
         </a>
@@ -231,11 +231,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/top4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Bassett Plush Sofa</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$300</h6>
             </div>
           </div>
         </a>
@@ -243,11 +243,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/top5.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Black Nightstand Table</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$30</h6>
             </div>
           </div>
         </a>
@@ -261,11 +261,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/feat1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Bose Speaker Set</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$20</h5>
             </div>
           </div>
         </a>
@@ -273,11 +273,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/feat2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Roku Express</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$55</h5>
             </div>
           </div>
         </a>
@@ -285,11 +285,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/feat3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Kindle Fire Tablet</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$45</h5>
             </div>
           </div>
         </a>
@@ -297,11 +297,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/feat4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Gen. 3 AirPods</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$150</h5>
             </div>
           </div>
         </a>
@@ -309,11 +309,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/feat5.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Vinyl Record Player</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">$50</h5>
             </div>
           </div>
         </a>
@@ -327,11 +327,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/textbook1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Technician Automotive Repair Textbooks</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$60</h6>
             </div>
           </div>
         </a>
@@ -339,11 +339,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/textbook2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Electrical Engineering Textbooks</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$30</h6>
             </div>
           </div>
         </a>
@@ -351,11 +351,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/textbook3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Medical Textbooks Mint</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$45</h6>
             </div>
           </div>
         </a>
@@ -363,11 +363,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/textbook4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Various Textbooks Good Condition</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$10</h6>
             </div>
           </div>
         </a>
@@ -375,11 +375,11 @@
       <div class="col-md">
         <a href="#" class="sale-card">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resources/images/textbook5.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Item Name</p>
+              <p class="card-text">Two Reading Textbooks</p>
               <h6 class="card-subtitle">Price</h6>
-              <h5 class="card-title">Card title</h5>
+              <h6 class="card-title">$10</h6>
             </div>
           </div>
         </a>
