--- a/Final/index.html
+++ b/Final/index.html
@@ -30,21 +30,42 @@
     <!-- Site Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <!-- Site logo -->
-      <a href="index.html" class="navbar-brand"><img class="RL-Logo" src="resources/images/Rensselear-List-Logo.png"
-          alt="Rensselaer List Logo"></a>
+      <a href="#" class="navbar-brand"
+        ><img
+          class="RL-Logo"
+          src="resources/images/Rensselear-List-Logo.png"
+          alt="Rensselaer List Logo"
+      /></a>
       <!-- Nav button for mobile  -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#RL-Navbar"
-        aria-controls="RL-Navbar"><span class="navbar-toggler-icon"></span></button>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="offcanvas"
+        data-bs-target="#RL-Navbar"
+        aria-controls="RL-Navbar"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <!-- Off Canvas Nav -->
       <div class="offcanvas offcanvas-end" tabindex="-1" id="RL-Navbar">
         <div class="offcanvas-header">
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav flex-fill justify-content-between pt-2">
-            <li class="nav-item dropdown nav-x-padding">
-              <a class="nav-link dropdown-toggle color-nav-link" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">Browse</a>
+            <li class="nav-item dropdown ps-3">
+              <a
+                class="nav-link dropdown-toggle"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                >Browse</a
+              >
               <ul class="dropdown-menu">
                 <li><a href="#" class="dropdown-item">All</a></li>
                 <li><a href="#" class="dropdown-item">New Items</a></li>
@@ -54,27 +75,46 @@
             </li>
             <form class="d-flex ms-lg-auto" role="search">
               <div class="input-group">
-              <button class="btn btn-primary input-group-text" type="submit"><i class="bi bi-search"></i></button>
-              <input class="form-control" size="35" type="search" placeholder="Search" aria-label="Search">
-            </div>
+                <button
+                  class="btn btn-primary input-group-text"
+                  type="submit"
+                >
+                  <i class="bi bi-search"></i>
+                </button>
+                <input
+                  class="form-control"
+                  size="35"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+              </div>
             </form>
             <li class="nav-item ms-lg-auto">
-              <a class="nav-link color-nav-link" href="resources/pages/signup.html">Sign Up</a>
+              <a class="nav-link" href="resources/pages/signup.html">Sign Up</a>
             </li>
-            <li class="nav-item pe-2 nav-x-padding">
-              <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#log-in-modal" role="button">Log
-                In</a>
+            <li class="nav-item pe-2">
+              <a
+                class="nav-link"
+                href="#"
+                data-bs-toggle="modal"
+                data-bs-target="#log-in-modal"
+                role="button"
+                >Log In</a
+              >
             </li>
             <li class="nav-item black-line"></li>
-            <li class="nav-item nav-x-padding">
-              <a class="btn btn-primary nav-btn" href="#" role="button">Sell</a>
+            <li class="nav-item ps-3">
+              <a class="btn btn-primary nav-btn" href="#" role="button"
+                >Sell</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-  <!-- Top Items of RL with carousel  -->
+<!-- Top Items of RL with carousel  -->
   <section class="container-xxl py-5">
     <h2 class="sec-head-1 pb-3">Top Items</h2>
     <div id="top-item-carousel" class="carousel carousel-light bg-dark slide">
@@ -90,7 +130,7 @@
             class="d-block w-100 carousel-img" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Spongebob Chair</h5>
-            <a href="#" class="btn btn-primary">View Item</a>
+            <a href="resources/pages/product-page.html" class="btn btn-primary">View Item</a>
           </div>
         </div>
         <div class="carousel-item">
