--- a/Final/resources/pages/product-page.html
+++ b/Final/resources/pages/product-page.html
@@ -1,159 +1,247 @@
 <!DOCTYPE html>
 <html lang="en-US">
-
-<head>
+  <head>
     <!--meta tags-->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A platform for RPI students to buy and sell items.">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A platform for RPI students to buy and sell items."
+    />
     <!-- Latest compiled and minified bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css"
+    />
     <!--Fonts and CSS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../stylesheets/style.css" />
     <!-- Bootstrap JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"
-        defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"
+      defer
+    ></script>
     <!-- custom js -->
-    <script src="index.js" defer></script>
+    <script src="../scripts/index.js" defer></script>
     <title>Rensselaer List</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Site Header -->
     <header class="container-xxl">
-        <!-- Site Nav Bar -->
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <!-- Site logo -->
-            <a href="index.html" class="navbar-brand"><img class="RL-Logo" src="resources/Rensselear-List-Logo.png"
-                    alt="Rensselaer List Logo"></a>
-            <!-- Nav button for mobile  -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#RL-Navbar"
-                aria-controls="RL-Navbar"><span class="navbar-toggler-icon"></span></button>
-            <!-- Off Canvas Nav -->
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="RL-Navbar">
-                <div class="offcanvas-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      <!-- Site Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <!-- Site logo -->
+        <a href="../../index.html" class="navbar-brand"
+          ><img
+            class="RL-Logo"
+            src="../images/Rensselear-List-Logo.png"
+            alt="Rensselaer List Logo"
+        /></a>
+        <!-- Nav button for mobile  -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#RL-Navbar"
+          aria-controls="RL-Navbar"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Off Canvas Nav -->
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="RL-Navbar">
+          <div class="offcanvas-header">
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav flex-fill justify-content-between pt-2">
+              <li class="nav-item dropdown ps-3">
+                <a
+                  class="nav-link dropdown-toggle"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  >Browse</a
+                >
+                <ul class="dropdown-menu">
+                  <li><a href="#" class="dropdown-item">All</a></li>
+                  <li><a href="#" class="dropdown-item">New Items</a></li>
+                  <li><a href="#" class="dropdown-item">By Category</a></li>
+                  <li><a href="#" class="dropdown-item">Top Listings</a></li>
+                </ul>
+              </li>
+              <form class="d-flex ms-lg-auto" role="search">
+                <div class="input-group">
+                  <button
+                    class="btn btn-primary input-group-text"
+                    type="submit"
+                  >
+                    <i class="bi bi-search"></i>
+                  </button>
+                  <input
+                    class="form-control"
+                    size="35"
+                    type="search"
+                    placeholder="Search"
+                    aria-label="Search"
+                  />
                 </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav flex-fill justify-content-between pt-2">
-                        <li class="nav-item dropdown ps-3">
-                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">Browse</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#" class="dropdown-item">All</a></li>
-                                <li><a href="#" class="dropdown-item">New Items</a></li>
-                                <li><a href="#" class="dropdown-item">By Category</a></li>
-                                <li><a href="#" class="dropdown-item">Top Listings</a></li>
-                            </ul>
-                        </li>
-                        <form class="d-flex ms-lg-auto" role="search">
-                            <div class="input-group">
-                                <button class="btn btn-primary input-group-text" type="submit"><i
-                                        class="bi bi-search"></i></button>
-                                <input class="form-control" size="35" type="search" placeholder="Search"
-                                    aria-label="Search">
-                            </div>
-                        </form>
-                        <li class="nav-item ms-lg-auto">
-                            <a class="nav-link" href="#">Sign Up</a>
-                        </li>
-                        <li class="nav-item pe-2 ">
-                            <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#log-in-modal"
-                                role="button">Log
-                                In</a>
-                        </li>
-                        <li class="nav-item black-line"></li>
-                        <li class="nav-item ps-3">
-                            <a class="btn btn-primary nav-btn" href="#" role="button">Sell</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+              </form>
+              <li class="nav-item ms-lg-auto">
+                <a class="nav-link" href="#">Sign Up</a>
+              </li>
+              <li class="nav-item pe-2">
+                <a
+                  class="nav-link"
+                  href="#"
+                  data-bs-toggle="modal"
+                  data-bs-target="#log-in-modal"
+                  role="button"
+                  >Log In</a
+                >
+              </li>
+              <li class="nav-item black-line"></li>
+              <li class="nav-item ps-3">
+                <a class="btn btn-primary nav-btn" href="#" role="button"
+                  >Sell</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <!-- product details section -->
     <section class="container-xxl py-5">
-        <h2 class="sec-head-1 pb-3">Spongebob Chair</h2>
-        <div class="row">
-            <div class="col-md">
-                <img src="https://secure.img1-cg.wfcdn.com/im/16817007/c_crop-h680-w680%5Ecompr-r85/1127/112745653/default_name.jpg"
-                    alt="Current Product" id="current-img" class="rounded main-product mb-4">
-                <div class="row">
-                    <div class="col">
-                        <img src="https://secure.img1-cg.wfcdn.com/im/16817007/c_crop-h680-w680%5Ecompr-r85/1127/112745653/default_name.jpg"
-                            alt="" class="img-thumbnail rounded  inactive-thumbnail active-thumbnail">
-                    </div>
-                    <div class="col">
-                        <img src="https://secure.img1-cg.wfcdn.com/im/66981137/c_crop-h680-w680%5Ecompr-r85/2046/204656991/default_name.jpg"
-                            alt="" class="img-thumbnail rounded inactive-thumbnail">
-                    </div>
-                    <div class="col">
-                        <img src="https://secure.img1-cg.wfcdn.com/im/80960585/c_crop-h680-w680%5Ecompr-r85/1133/113328372/default_name.jpg"
-                            alt="" class="img-thumbnail rounded inactive-thumbnail">
-                    </div>
-                </div>
+      <h2 class="sec-head-1 pb-3">Spongebob Chair</h2>
+      <div class="row">
+        <div class="col-md">
+          <img
+            src="https://secure.img1-cg.wfcdn.com/im/16817007/c_crop-h680-w680%5Ecompr-r85/1127/112745653/default_name.jpg"
+            alt="Current Product"
+            id="current-img"
+            class="rounded main-product mb-4"
+          />
+          <div class="row">
+            <div class="col">
+              <img
+                src="https://secure.img1-cg.wfcdn.com/im/16817007/c_crop-h680-w680%5Ecompr-r85/1127/112745653/default_name.jpg"
+                alt=""
+                class="img-thumbnail rounded inactive-thumbnail active-thumbnail"
+              />
             </div>
-            <div class="col-md ms-5">
-                <h3 class="sec-head-1 pb-1">Listed Price</h3>
-                <h2 class="sec-head-2"><b>$200</b></h2>
-                <div class="row pt-4">
-                    <div class="col">
-                        <button class="btn btn-success product-btn">Buy Now</button>
-                    </div>
-                    <div class="col d-flex justify-content-start">
-                        <button class="btn btn-secondary product-btn">Make Offer</button>
-                    </div>
-                </div>
-                h2.
-
+            <div class="col">
+              <img
+                src="https://secure.img1-cg.wfcdn.com/im/66981137/c_crop-h680-w680%5Ecompr-r85/2046/204656991/default_name.jpg"
+                alt=""
+                class="img-thumbnail rounded inactive-thumbnail"
+              />
             </div>
+            <div class="col">
+              <img
+                src="https://secure.img1-cg.wfcdn.com/im/80960585/c_crop-h680-w680%5Ecompr-r85/1133/113328372/default_name.jpg"
+                alt=""
+                class="img-thumbnail rounded inactive-thumbnail"
+              />
+            </div>
+          </div>
         </div>
-
+        <div class="col-md ms-5">
+          <h3 class="sec-head-1 pb-1">Listed Price</h3>
+          <h2 class="sec-head-2"><b>$200</b></h2>
+          <div class="row pt-4">
+            <div class="col">
+              <button class="btn btn-success product-btn">Buy Now</button>
+            </div>
+            <div class="col d-flex justify-content-start">
+              <button class="btn btn-secondary product-btn">Make Offer</button>
+            </div>
+          </div>
+          h2.
+        </div>
+      </div>
     </section>
 
-
     <!-- Modal For Signing in -->
-    <div class="modal fade" id="log-in-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="log-in-modal-label" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h1 class="modal-title fs-5 sec-head-2" id="log-in-modal-label">Welcome Back</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="mb-3">
-                            <label for="email-input" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="email-input" aria-describedby="emailHelp">
-                        </div>
-                        <label for="password-input" class="form-label">Password</label>
-                        <div class="mb-3 input-group">
-                            <input type="password" class="form-control" id="password-input">
-                            <button class="input-group-text bg-transparent" onclick="togglePassword()"><i
-                                    class="bi bi-eye-slash" id="toggle-password"></i></button>
-
-                        </div>
-                        <button type="submit" class="btn btn-primary">Log In</button>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <a class="modal-footer-link" href="#">Sign Up</a>
-                    <span>|</span>
-                    <a class="modal-footer-link" href="#">Forgot Password?</a>
-                </div>
-            </div>
+    <div
+      class="modal fade"
+      id="log-in-modal"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="log-in-modal-label"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5 sec-head-2" id="log-in-modal-label">
+              Welcome Back
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="email-input" class="form-label"
+                  >Email address</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email-input"
+                  aria-describedby="emailHelp"
+                />
+              </div>
+              <label for="password-input" class="form-label">Password</label>
+              <div class="mb-3 input-group">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password-input"
+                />
+                <button
+                  class="input-group-text bg-transparent"
+                  onclick="togglePassword()"
+                >
+                  <i class="bi bi-eye-slash" id="toggle-password"></i>
+                </button>
+              </div>
+              <button type="submit" class="btn btn-primary">Log In</button>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <a class="modal-footer-link" href="#">Sign Up</a>
+            <span>|</span>
+            <a class="modal-footer-link" href="#">Forgot Password?</a>
+          </div>
         </div>
+      </div>
     </div>
     <!-- Site Footer -->
-    <footer>
-    </footer>
-</body>
-
+    <footer></footer>
+  </body>
 </html>
