--- a/Final/index.html
+++ b/Final/index.html
@@ -30,42 +30,23 @@
     <!-- Site Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <!-- Site logo -->
-      <a href="#" class="navbar-brand"
-        ><img
-          class="RL-Logo"
-          src="resources/images/Rensselear-List-Logo.png"
-          alt="Rensselaer List Logo"
-      /></a>
+      <a href="#" class="navbar-brand"><img class="RL-Logo" src="resources/images/Rensselear-List-Logo.png"
+          alt="Rensselaer List Logo" /></a>
       <!-- Nav button for mobile  -->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="offcanvas"
-        data-bs-target="#RL-Navbar"
-        aria-controls="RL-Navbar"
-      >
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#RL-Navbar"
+        aria-controls="RL-Navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <!-- Off Canvas Nav -->
       <div class="offcanvas offcanvas-end" tabindex="-1" id="RL-Navbar">
         <div class="offcanvas-header">
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="offcanvas"
-            aria-label="Close"
-          ></button>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav flex-fill justify-content-between pt-2">
             <li class="nav-item dropdown ps-3">
-              <a
-                class="nav-link dropdown-toggle"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                >Browse</a
-              >
+              <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">Browse</a>
               <ul class="dropdown-menu">
                 <li><a href="#" class="dropdown-item">All</a></li>
                 <li><a href="#" class="dropdown-item">New Items</a></li>
@@ -75,46 +56,29 @@
             </li>
             <form class="d-flex ms-lg-auto" role="search">
               <div class="input-group">
-                <button
-                  class="btn btn-primary input-group-text"
-                  type="submit"
-                >
+                <button class="btn btn-primary input-group-text" type="submit">
                   <i class="bi bi-search"></i>
                 </button>
-                <input
-                  class="form-control"
-                  size="35"
-                  type="search"
-                  placeholder="Search"
-                  aria-label="Search"
-                />
+                <input class="form-control" size="35" type="search" placeholder="Search" aria-label="Search" />
               </div>
             </form>
             <li class="nav-item ms-lg-auto">
               <a class="nav-link" href="resources/pages/signup.html">Sign Up</a>
             </li>
             <li class="nav-item pe-2">
-              <a
-                class="nav-link"
-                href="#"
-                data-bs-toggle="modal"
-                data-bs-target="#log-in-modal"
-                role="button"
-                >Log In</a
-              >
+              <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#log-in-modal" role="button">Log
+                In</a>
             </li>
             <li class="nav-item black-line"></li>
             <li class="nav-item ps-3">
-              <a class="btn btn-primary nav-btn" href="#" role="button"
-                >Sell</a
-              >
+              <a class="btn btn-primary nav-btn" href="#" role="button">Sell</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-<!-- Top Items of RL with carousel  -->
+  <!-- Top Items of RL with carousel  -->
   <section class="container-xxl py-5">
     <h2 class="sec-head-1 pb-3">Top Items</h2>
     <div id="top-item-carousel" class="carousel carousel-light bg-dark slide">
@@ -195,7 +159,7 @@
           <div class="card">
             <img src="resources/images/new3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Dirt Devil  Vacuum</p>
+              <p class="card-text">Dirt Devil Vacuum</p>
               <h6 class="card-subtitle">Price</h6>
               <h6 class="card-title">$5</h6>
             </div>
@@ -445,8 +409,9 @@
             <label for="password-input" class="form-label">Password</label>
             <div class="mb-3 input-group">
               <input type="password" class="form-control" id="password-input">
-              <button class="input-group-text bg-transparent" onclick="togglePassword()"><i class="bi bi-eye-slash" id="toggle-password"></i></button>
-              
+              <button class="input-group-text bg-transparent" onclick="togglePassword()"><i class="bi bi-eye-slash"
+                  id="toggle-password"></i></button>
+
             </div>
             <button type="submit" class="btn btn-primary">Log In</button>
           </form>
