--- a/Final/resources/pages/signup.html
+++ b/Final/resources/pages/signup.html
@@ -1,202 +1,129 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <!--meta tags-->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="A platform for RPI students to buy and sell items."
-    />
-    <!-- Latest compiled and minified bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css"
-    />
-    <!--Fonts and CSS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../stylesheets/style.css" />
-    <!-- Bootstrap JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-      crossorigin="anonymous"
-      defer
-    ></script>
-    <script src="../scripts/index.js" defer></script>
-    <!-- custom js -->
-    <title>Rensselaer List</title>
-  </head>
 
-  <body>
-    <!-- Site Header -->
-    <header class="container-xxl">
-      <!-- Site Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <!-- Site logo -->
-        <a href="../../index.html" class="navbar-brand"
-          ><img
-            class="RL-Logo"
-            src="../images/Rensselear-List-Logo.png"
-            alt="Rensselaer List Logo"
-        /></a>
-        <!-- Nav button for mobile  -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#RL-Navbar"
-          aria-controls="RL-Navbar"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Off Canvas Nav -->
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="RL-Navbar">
-          <div class="offcanvas-header">
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav flex-fill justify-content-between pt-2">
-              <li class="nav-item dropdown ps-3">
-                <a
-                  class="nav-link dropdown-toggle"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                  >Browse</a
-                >
-                <ul class="dropdown-menu">
-                  <li><a href="#" class="dropdown-item">All</a></li>
-                  <li><a href="#" class="dropdown-item">New Items</a></li>
-                  <li><a href="#" class="dropdown-item">By Category</a></li>
-                  <li><a href="#" class="dropdown-item">Top Listings</a></li>
-                </ul>
-              </li>
-              <form class="d-flex ms-lg-auto" role="search">
-                <div class="input-group">
-                  <button
-                    class="btn btn-primary input-group-text"
-                    type="submit"
-                  >
-                    <i class="bi bi-search"></i>
-                  </button>
-                  <input
-                    class="form-control"
-                    size="35"
-                    type="search"
-                    placeholder="Search"
-                    aria-label="Search"
-                  />
-                </div>
-              </form>
-              <li class="nav-item ms-lg-auto">
-                <a class="nav-link" href="#">Sign Up</a>
-              </li>
-              <li class="nav-item pe-2">
-                <a
-                  class="nav-link"
-                  href="#"
-                  data-bs-toggle="modal"
-                  data-bs-target="#log-in-modal"
-                  role="button"
-                  >Log In</a
-                >
-              </li>
-              <li class="nav-item black-line"></li>
-              <li class="nav-item ps-3">
-                <a class="btn btn-primary nav-btn" href="#" role="button"
-                  >Sell</a
-                >
-              </li>
-            </ul>
-          </div>
+<head>
+  <!--meta tags-->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="A platform for RPI students to buy and sell items." />
+  <!-- Latest compiled and minified bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css" />
+  <!--Fonts and CSS-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../stylesheets/style.css" />
+  <!-- Bootstrap JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"
+    defer></script>
+  <script src="../scripts/index.js" defer></script>
+  <!-- custom js -->
+  <title>Rensselaer List</title>
+</head>
+
+<body>
+  <!-- Site Header -->
+  <header class="container-xxl">
+    <!-- Site Nav Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <!-- Site logo -->
+      <a href="../../index.html" class="navbar-brand"><img class="RL-Logo" src="../images/Rensselear-List-Logo.png"
+          alt="Rensselaer List Logo" /></a>
+      <!-- Nav button for mobile  -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#RL-Navbar"
+        aria-controls="RL-Navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Off Canvas Nav -->
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="RL-Navbar">
+        <div class="offcanvas-header">
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-      </nav>
-    </header>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav flex-fill justify-content-between pt-2">
+            <li class="nav-item dropdown ps-3">
+              <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">Browse</a>
+              <ul class="dropdown-menu">
+                <li><a href="#" class="dropdown-item">All</a></li>
+                <li><a href="#" class="dropdown-item">New Items</a></li>
+                <li><a href="#" class="dropdown-item">By Category</a></li>
+                <li><a href="#" class="dropdown-item">Top Listings</a></li>
+              </ul>
+            </li>
+            <form class="d-flex ms-lg-auto" role="search">
+              <div class="input-group">
+                <button class="btn btn-primary input-group-text" type="submit">
+                  <i class="bi bi-search"></i>
+                </button>
+                <input class="form-control" size="35" type="search" placeholder="Search" aria-label="Search" />
+              </div>
+            </form>
+            <li class="nav-item ms-lg-auto">
+              <a class="nav-link" href="#">Sign Up</a>
+            </li>
+            <li class="nav-item pe-2">
+              <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#log-in-modal" role="button">Log
+                In</a>
+            </li>
+            <li class="nav-item black-line"></li>
+            <li class="nav-item ps-3">
+              <a class="btn btn-primary nav-btn" href="#" role="button">Sell</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-    <div class="sign-up-form py-5">
-      <div class="container">
-        <div class="row d-flex justify-content-center align-items-center">
-          <div class="col">
-            <div class="card custom-card">
-              <div class="card-body">
-                <div class="row justify-content-center">
-                  <div class="col">
-                    <h4 class="text-center">Sign up</h4>
-                    <form>
-                      <div class="input-group py-2 each-input">
-                        <span class="input-group-text">
-                          <i class="bi bi-person-circle"></i>
-                        </span>
-                        <input
-                          type="text"
-                          class="form-control"
-                          placeholder="Your Name"
-                        />
-                      </div>
+  <div class="sign-up-form py-5">
+    <div class="container">
+      <div class="row d-flex justify-content-center align-items-center">
+        <div class="col">
+          <div class="card custom-card">
+            <div class="card-body">
+              <div class="row justify-content-center">
+                <div class="col">
+                  <h4 class="text-center">Sign up</h4>
+                  <form>
+                    <div class="input-group py-2 each-input">
+                      <span class="input-group-text">
+                        <i class="bi bi-person-circle"></i>
+                      </span>
+                      <input type="text" class="form-control" placeholder="Your Name" />
+                    </div>
 
-                      <div class="input-group py-2 each-input">
-                        <span class="input-group-text">
-                          <i class="bi bi-envelope-fill"></i
-                        ></span>
-                        <input
-                          type="email"
-                          class="form-control"
-                          placeholder="Your RPI Email"
-                        />
-                      </div>
+                    <div class="input-group py-2 each-input">
+                      <span class="input-group-text">
+                        <i class="bi bi-envelope-fill"></i></span>
+                      <input type="email" class="form-control" placeholder="Your RPI Email" />
+                    </div>
 
-                      <div class="input-group py-2 each-input">
-                        <span class="input-group-text">
-                          <i class="bi bi-unlock-fill"></i>
-                        </span>
-                        <input
-                          type="password"
-                          class="form-control"
-                          placeholder="Enter Password"
-                        />
-                      </div>
+                    <div class="input-group py-2 each-input">
+                      <span class="input-group-text">
+                        <i class="bi bi-unlock-fill"></i>
+                      </span>
+                      <input type="password" class="form-control" placeholder="Enter Password" />
+                    </div>
 
-                      <div class="input-group py-2 each-input">
-                        <span class="input-group-text">
-                          <i class="bi bi-lock-fill"></i>
-                        </span>
-                        <input
-                          type="password"
-                          class="form-control"
-                          placeholder="Confirm Pasword"
-                        />
-                      </div>
-                      <div class="center-button py-4 each-input">
-                        <button type="button" class="btn btn-primary">
-                          Register
-                        </button>
-                      </div>
-                    </form>
-                  </div>
-                  <div class="col d-flex align-items-center">
-                    <img
-                      src="../images/sign-up-image.jpg"
-                      class="img-fluid"
-                      alt="Transaction Image"
-                    />
-                  </div>
+                    <div class="input-group py-2 each-input">
+                      <span class="input-group-text">
+                        <i class="bi bi-lock-fill"></i>
+                      </span>
+                      <input type="password" class="form-control" placeholder="Confirm Pasword" />
+                    </div>
+                    <div class="center-button py-4 each-input">
+                      <button type="button" class="btn btn-primary">
+                        Register
+                      </button>
+                    </div>
+                  </form>
+                </div>
+                <div class="col d-flex align-items-center">
+                  <img src="../images/sign-up-image.jpg" class="img-fluid" alt="Transaction Image" />
                 </div>
               </div>
             </div>
@@ -204,69 +131,45 @@
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Modal For Signing in -->
-    <div
-      class="modal fade"
-      id="log-in-modal"
-      data-bs-backdrop="static"
-      data-bs-keyboard="false"
-      tabindex="-1"
-      aria-labelledby="log-in-modal-label"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5 sec-head-2" id="log-in-modal-label">
-              Welcome Back
-            </h1>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="mb-3">
-                <label for="email-input" class="form-label"
-                  >Email address</label
-                >
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email-input"
-                  aria-describedby="emailHelp"
-                />
-              </div>
-              <label for="password-input" class="form-label">Password</label>
-              <div class="mb-3 input-group">
-                <input
-                  type="password"
-                  class="form-control"
-                  id="password-input"
-                />
-                <button
-                  class="input-group-text bg-transparent"
-                  onclick="togglePassword()"
-                >
-                  <i class="bi bi-eye-slash" id="toggle-password"></i>
-                </button>
-              </div>
-              <button type="submit" class="btn btn-primary">Log In</button>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <a class="modal-footer-link" href="#">Sign Up</a>
-            <span>|</span>
-            <a class="modal-footer-link" href="#">Forgot Password?</a>
-          </div>
+  <!-- Modal For Signing in -->
+  <div class="modal fade" id="log-in-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="log-in-modal-label" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5 sec-head-2" id="log-in-modal-label">
+            Welcome Back
+          </h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="email-input" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="email-input" aria-describedby="emailHelp" />
+            </div>
+            <label for="password-input" class="form-label">Password</label>
+            <div class="mb-3 input-group">
+              <input type="password" class="form-control" id="password-input" />
+              <button class="input-group-text bg-transparent" onclick="togglePassword()">
+                <i class="bi bi-eye-slash" id="toggle-password"></i>
+              </button>
+            </div>
+            <button type="submit" class="btn btn-primary">Log In</button>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <a class="modal-footer-link" href="#">Sign Up</a>
+          <span>|</span>
+          <a class="modal-footer-link" href="#">Forgot Password?</a>
         </div>
       </div>
     </div>
-    <!-- Site Footer -->
-    <footer></footer>
-  </body>
+  </div>
+  <!-- Site Footer -->
+  <footer></footer>
+</body>
+
 </html>
