--- a/Final/index.html
+++ b/Final/index.html
@@ -191,6 +191,7 @@
         </a>
       </div>
       <a href="#" class="view-all pt-2">View All <i class="bi bi-arrow-right-square"></i></a>
+    </div>
   </section>
   <!-- Top Listings Section -->
   <section class="container-xxl pb-5">
@@ -257,6 +258,7 @@
         </a>
       </div>
       <a href="#" class="view-all pt-2">View All <i class="bi bi-arrow-right-square"></i></a>
+    </div>
   </section>
   <!-- Featured Items Section -->
   <section class="container-xxl pb-5">
@@ -323,6 +325,7 @@
         </a>
       </div>
       <a href="#" class="view-all pt-2">View All <i class="bi bi-arrow-right-square"></i></a>
+    </div>
   </section>
   <!-- Text Books Section -->
   <section class="container-xxl pb-5">
@@ -389,6 +392,7 @@
         </a>
       </div>
       <a href="#" class="view-all pt-2">View All <i class="bi bi-arrow-right-square"></i></a>
+    </div>
   </section>
 
   <!-- Modal For Signing in -->
