--- a/Final/index.html
+++ b/Final/index.html
@@ -105,7 +105,7 @@
             </li>
             <li class="nav-item black-line"></li>
             <li class="nav-item ps-3">
-              <a class="btn btn-primary nav-btn" href="#" role="button"
+              <a class="btn btn-primary nav-btn" href="resources/pages/list-item.html" role="button"
                 >Sell</a
               >
             </li>
