--- a/Final/resources/pages/list-item.html
+++ b/Final/resources/pages/list-item.html
@@ -34,8 +34,8 @@
       crossorigin="anonymous"
       defer
     ></script>
-    <!-- custom js -->
     <script src="../scripts/index.js" defer></script>
+    <!-- custom js -->
     <title>Rensselaer List</title>
   </head>
 
@@ -120,10 +120,7 @@
               </li>
               <li class="nav-item black-line"></li>
               <li class="nav-item ps-3">
-                <a
-                  class="btn btn-primary nav-btn"
-                  href="list-item.html"
-                  role="button"
+                <a class="btn btn-primary nav-btn" href="#" role="button"
                   >Sell</a
                 >
               </li>
@@ -132,56 +129,88 @@
         </div>
       </nav>
     </header>
-    <!-- product details section -->
-    <section class="container-xxl py-5">
-      <h2 class="sec-head-1 pb-3">Spongebob Chair</h2>
-      <div class="row">
-        <div class="col-md">
-          <img
-            src="https://secure.img1-cg.wfcdn.com/im/16817007/c_crop-h680-w680%5Ecompr-r85/1127/112745653/default_name.jpg"
-            alt="Current Product"
-            id="current-img"
-            class="rounded main-product mb-4"
-          />
-          <div class="row">
-            <div class="col">
-              <img
-                src="https://secure.img1-cg.wfcdn.com/im/16817007/c_crop-h680-w680%5Ecompr-r85/1127/112745653/default_name.jpg"
-                alt=""
-                class="img-thumbnail rounded inactive-thumbnail active-thumbnail"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="https://secure.img1-cg.wfcdn.com/im/66981137/c_crop-h680-w680%5Ecompr-r85/2046/204656991/default_name.jpg"
-                alt=""
-                class="img-thumbnail rounded inactive-thumbnail"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="https://secure.img1-cg.wfcdn.com/im/80960585/c_crop-h680-w680%5Ecompr-r85/1133/113328372/default_name.jpg"
-                alt=""
-                class="img-thumbnail rounded inactive-thumbnail"
-              />
+
+    <div class="sign-up-form py-5">
+      <div class="container">
+        <div class="row d-flex justify-content-center align-items-center">
+          <div class="col">
+            <div class="card custom-card">
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col">
+                    <h4 class="text-center">Sell an Item</h4>
+                    <form>
+                      <div class="input-group">
+                        <label for="uploadFiles" class="form-label"
+                          >Upload Images</label
+                        >
+                      </div>
+                      <div class="input-group py-2 each-input">
+                        <input
+                          class="form-control"
+                          type="file"
+                          id="uploadFiles"
+                          multiple
+                        />
+                      </div>
+
+                      <div class="input-group py-2 each-input">
+                        <span class="input-group-text">
+                          <i class="bi bi-person-circle"></i>
+                        </span>
+                        <input
+                          type="text"
+                          class="form-control"
+                          placeholder="Your Name"
+                        />
+                      </div>
+
+                      <div class="input-group py-2 each-input">
+                        <span class="input-group-text">
+                          <i class="bi bi-envelope-fill"></i
+                        ></span>
+                        <input
+                          type="email"
+                          class="form-control"
+                          placeholder="Your RPI Email"
+                        />
+                      </div>
+
+                      <div class="input-group py-2 each-input">
+                        <span class="input-group-text">
+                          <i class="bi bi-unlock-fill"></i>
+                        </span>
+                        <input
+                          type="password"
+                          class="form-control"
+                          placeholder="Enter Password"
+                        />
+                      </div>
+
+                      <div class="input-group py-2 each-input">
+                        <span class="input-group-text">
+                          <i class="bi bi-lock-fill"></i>
+                        </span>
+                        <input
+                          type="password"
+                          class="form-control"
+                          placeholder="Confirm Pasword"
+                        />
+                      </div>
+                      <div class="center-button py-4 each-input">
+                        <button type="button" class="btn btn-primary">
+                          List your Item!
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md ms-5">
-          <h3 class="sec-head-1 pb-1">Listed Price</h3>
-          <h2 class="sec-head-2"><b>$200</b></h2>
-          <div class="row pt-4">
-            <div class="col">
-              <button class="btn btn-success product-btn">Buy Now</button>
-            </div>
-            <div class="col d-flex justify-content-start">
-              <button class="btn btn-secondary product-btn">Make Offer</button>
-            </div>
-          </div>
-          h2.
         </div>
       </div>
-    </section>
+    </div>
 
     <!-- Modal For Signing in -->
     <div
