--- a/Final/resources/pages/signup.html
+++ b/Final/resources/pages/signup.html
@@ -120,7 +120,10 @@
               </li>
               <li class="nav-item black-line"></li>
               <li class="nav-item ps-3">
-                <a class="btn btn-primary nav-btn" href="#" role="button"
+                <a
+                  class="btn btn-primary nav-btn"
+                  href="list-item.html"
+                  role="button"
                   >Sell</a
                 >
               </li>
